<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:src="@drawable/polygon_matic_logo"
        android:layout_marginTop="26dp"/>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_your_account"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="italic" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="12dp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="12dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword"
        android:padding="12dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:text="@string/register"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/goBackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="#323232" />
</LinearLayout>
