<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="26dp">


        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="@drawable/background_back_button"
            android:src="@drawable/icon_back" />


        <ImageView
            android:id="@+id/crypto_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/crypto_image" />


        <TextView
            android:id="@+id/coin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Bitcoin" />

        <TextView
            android:id="@+id/coin_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="#4CAF50"
            android:textSize="20sp"
            tools:text="$34,500.00" />


        <ImageButton
            android:id="@+id/refresh_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/icon_refresh"
            android:backgroundTint="@android:color/transparent" />

        <!-- Coin 24h Change -->
        <TextView
            android:id="@+id/coin_24h_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="#4CAF50"
            android:textSize="18sp"
            tools:text="+2.5%" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coin_24h_change_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:backgroundTint="@drawable/background_time_button"
                android:text="@string/_24h" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coin_7d_change_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:backgroundTint="@drawable/background_time_button"
                android:text="@string/_7d" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coin_1m_change_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:backgroundTint="@drawable/background_time_button"
                android:text="@string/_1m" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coin_90d_change_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:backgroundTint="@drawable/background_time_button"
                android:text="@string/_90d" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@drawable/background_favorite_button"
            android:text="@string/add_favorites"
            android:textColor="@color/white"
            app:icon="@drawable/baseline_favorite_24"
            app:iconGravity="end"
            app:textAllCaps="false" />


        <TextView
            android:id="@+id/crypto_hashing_algorithm_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/hashing_algorithm"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/crypto_hashing_algorithm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/sha_256"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="" />

    </LinearLayout>
</ScrollView>
